# extensible-elaborator

./: .gitignore  .projectile  LICENSE  README.md  flake.nix  nixpkgs.nix
.github/workflows/: abstract.yml  camera-ready.yml  eetc-build.yml  exel-build.yml  paper.yml  slides.yml
abstract/: .gitignore  Makefile  Readme.md  abstract.nix  bib.bib  default.nix  main.md
archive-oplss/full/: pi-forall.nix
archive-oplss/full/src/: Environment.hs  Parser.hs  TypeCheck.hs
archive-oplss/version1/nix/: unbound-generics.nix
archive-oplss/version1/src/: TypeCheck.hs
archive-oplss/version2/src/: Environment.hs
camera-ready-submission/source/: Makefile  acmart-taps.sty  body.tex  default.nix  main.tex  paper.nix
eetc/: README.md  cabal.project  default.nix  eetc.cabal  flake.nix  hie.yaml  old-flake.nix  pi-forall.cabal  shell.nix  stack.yaml
eetc/app/: Main.hs
eetc/extended/: pi-forall.cabal
eetc/extended/app/: Main.hs
eetc/extended/pi/: Makefile
eetc/extended/src/: Arbitrary.hs  Elaborator.hs  Environment.hs  ModuleStub.hs  Modules.hs  Parser.hs  PrettyPrint.hs  SurfaceSyntax.hs  TypeCheck.hs
eetc/full/src/: Modules.hs
eetc/nix/: compilerconfig.nix  module-graph.nix  overlays.nix  unbound-generics.nix
eetc/pi/: BoolLib.pi  BoolTest.pi  Equality.pi  Fix.pi  Hw1.pi  Hw2.pi  Lambda0.pi  List.pi  Makefile  Nat.pi  NatChurch.pi  Product.pi  Product1.pi  TypeTest.pi  Vec.pi
eetc/pi/test/: Bool.pi  BoolPlusTypeclass.pi  BoolTest.pi  IdTest.pi  ImplicitTest.pi  InferTest.pi  Lambda.pi  LambdaTest.pi  LetTest.pi  PiInjectivityTest.pi  RelevanceTest.pi  TypeClasses.pi  TypeParams.pi  TypeofType.pi
eetc/src/: Arbitrary.hs  Elaborator.hs  Environment.hs  Equal.hs  InternalSyntax.hs  LayoutToken.hs  ModuleStub.hs  Modules.hs  Parser.hs  PrettyPrint.hs  PrettyPrintInternal.hs  PrettyPrintSurface.hs  Reduction.hs  SurfaceSyntax.hs  TypeCheck.hs
eetc/src/Plugins/: Typeclasses.hs
eetc/src/Syntax/: Internal.hs  InternalSyntax.hs  PrettyPrintInternal.hs  PrettyPrintSurface.hs  SourceLocation.hs  Surface.hs  SurfaceSyntax.hs
eetc/src/TypeCheck/: Blockers.hs  Constraints.hs  ConstraintsActions.hs  Elaborator.hs  Environment.hs  Equal.hs  Monad.hs  OccursCheck.hs  Solver.hs  State.hs  StateActions.hs  TypeCheck.hs
eetc/src/TypeCheck/Monad/: Constraints.hs  Prelude.hs  TcMonad.hs  TcReader.hs  TcReaderEnv.hs  TcState.hs  Typeclasses.hs
eetc/src/TypeCheck/Solver/: Allsolver.hs  Base.hs  ConstructorInjectivity.hs  Identity.hs  Implicit.hs  Injection.hs  PiInjectivity.hs  PropagateSolutions.hs  PropagateSolutionsEq.hs  Reduce.hs  Syntactic.hs  TrivialMetas.hs  TypeConstructor.hs
eetc/test/: Main.hs
eetc/test/Tests/: Full.hs
eetc/version1/: default.nix  shell.nix
eetc/version2/pi/: NatChurch.pi
eetc/version2/src/: TypeCheck.hs
eetc/version3/src/: TypeCheck.hs
eetc/version3/test/: Lec2.pi
exel/: .gitignore  LICENSE  OLD-README.md  README.md  cabal.project  default.nix  exel.cabal  hie.yaml  pi-forall  shell.nix  stack.yaml
exel/app/: Main.hs
exel/pi/: Equality.pi  Hw2.pi  Lambda1.pi  Lec1.pi  Logic.pi  Nat.pi
exel/pi/old/: Fin.pi  FinHw.pi  Lambda.pi  Lambda2.pi  Lec2.pi  Lec4.pi  Lennart.pi  Makefile
exel/pi/test/: BoolPlusTypeclass.pi  CaseTest.pi  IdTest.pi  InferTest.pi  LetTest.pi  PiInjectivityTest.pi  RelevanceTest.pi  TypeParams.pi
exel/src/: Arbitrary.hs  Modules.hs  Parser.hs  Plugins.hs  PrettyPrint.hs  Reduction.hs
exel/src/Plugins/: Typeclasses.hs
exel/src/Syntax/: InternalSyntax.hs  ModuleStub.hs  PrettyPrintInternal.hs
exel/src/TypeCheck/: Constraints.hs  ConstraintsActions.hs  Elaborator.hs  Environment.hs  OccursCheck.hs  Solver.hs  State.hs  StateActions.hs  TypeCheck.hs
exel/src/TypeCheck/Monad/: TcMonad.hs  TcReader.hs  TcReaderEnv.hs  TcState.hs
exel/src/TypeCheck/Solver/: Allsolver.hs  Base.hs  Identity.hs  PiInjectivity.hs  Reduce.hs  TrivialMetas.hs  TyEqInjectivity.hs  TypeConstructor.hs
exel/test/: Main.hs
exel/test/Tests/: Full.hs  Parsing.hs  Solver.hs
extended/: shell.nix
extended/app/: Main.hs
extended/nix/: unbound-generics.nix
extended/pi/: Equal.pi  Lec3.pi  Product1.pi
extended/src/: Arbitrary.hs  Elaborator.hs  Environment.hs  Equal.hs  InternalSyntax.hs  Syntax.hs  TypeCheck.hs
full/: default.nix  shell.nix
full/app/: Main.hs
full/src/: TypeCheck.hs
paper/: .gitignore  .vale.ini  Makefile  architecture-diagram.excalidraw  bib.bib  default.nix  fonts.patch  main.md  main.tex  paper.nix  tex.diff
slides/: .gitignore  Makefile  bib.bib  default.nix  fonts.patch  macros.tex  main.md  slides.nix
slides/agda-constraints-plot/: .gitignore  Plotting.ipynb  data.csv  kernels.nix
version1/: default.nix
version1/src/: TypeCheck.hs
version2/pi/: Hw2.pi  Lec2.pi  NatChurch.pi
version2/src/: Equal.hs  TypeCheck.hs
version3/src/: Equal.hs  TypeCheck.hs
