cabal-Version: 2.2
name: eetc
version: 0.2
license: BSD-3-Clause
license-file: LICENSE
copyright: (c) 2022 Bohdan Liesnikov
description: An implementation of extensible elaborator
author: Bohdan Liesnikov <B.Liesnikov@tudelft.nl>, based on on code by Stephanie Weirich <sweirich@seas.upenn.edu> and Trellys Team <trellys@...>
maintainer: Bohdan Liesnikov <B.Liesnikov@tudelft.nl>
build-type: Simple
tested-with: GHC == 9.2.2
category: Compilers/Interpreters
homepage: https://github.com/liesnikov/extensible-elaborator
synopsis: Demo implementation of typechecker for dependently-typed language
source-repository head
  type: git
  location: https://github.com/liesnikov/extensible-elaborator

common shared-properties
  default-language:
    Haskell2010
  ghc-options:
    -Wall -fno-warn-unused-matches -fno-warn-orphans
  default-extensions:
    EmptyDataDecls
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    MultiParamTypeClasses
    NamedFieldPuns
    ParallelListComp
    PatternGuards
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns
  build-depends:
    base >= 4 && < 5,
    parsec >= 3.1.8 && < 3.2,
    mtl >= 2.2.1 && < 2.3,
    pretty >= 1.0.1.0,
    unbound-generics >= 0.4.3,
      -- method Unbound.Generics.LocallyNameless.Subst.Subst.substBvs was added in 0.4.3
    transformers,
    array >= 0.3.0.2 && < 0.6,
    -- monad-control-1.0.1.0 is the first to contain liftThrough
    monad-control >= 1.0.1.0 && < 1.1,
    containers,
    directory,
    filepath,
    HUnit,
    QuickCheck
  if !impl(ghc >= 8.0)
    build-depends: semigroups == 0.18.*


library
  import: shared-properties
  hs-source-dirs: src
  exposed-modules:
    LayoutToken
    Modules
    ModuleStub
    Parser
    PrettyPrint
    PrettyPrintInternal
    PrettyPrintSurface
    InternalSyntax
    SurfaceSyntax
    Arbitrary
    TypeCheck.Elaborator
    TypeCheck.Environment
    TypeCheck.Equal
    TypeCheck.TypeCheck
    TypeCheck.Monad
    TypeCheck.State


executable eetc
  import: shared-properties
  build-depends: eetc
  hs-source-dirs: app
  main-is: Main.hs

test-suite test-eetc
  import: shared-properties
  build-depends: eetc
    , QuickCheck >= 2.13.2
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
